# chan

./: .gitignore  Cargo.toml
src/: main.rs  models.rs  schema.rs
templates/: board.html.tera  home.html.tera
