[package]
name = "chan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.5.0-rc.1"
rocket_dyn_templates = {version = "0.1.0-rc.1", features = ["tera"]}
serde = "1.0.136"

[profile.dev.package.sqlx-macros]
opt-level = 3
